[gd_scene load_steps=16 format=3 uid="uid://dg3a774c6hsd3"]

[ext_resource type="Texture2D" uid="uid://c7jcrpe8n6228" path="res://unoptimized_assets/misc/textures/menu/options.png" id="1_kbli3"]
[ext_resource type="Script" uid="uid://cxkhcaqehaiox" path="res://scenes/menu/multiplayer.gd" id="2_kbli3"]
[ext_resource type="Texture2D" uid="uid://dx11833n71gqk" path="res://unoptimized_assets/misc/textures/menu/crazy_icon.png" id="2_xk6tx"]
[ext_resource type="FontFile" uid="uid://cvvi6o8v4r7dh" path="res://unoptimized_assets/misc/fonts/ariblk.ttf" id="3_kbli3"]
[ext_resource type="AudioStream" uid="uid://b4ysnjsshn364" path="res://assets/misc/sounds/uihover.mp3" id="4_6gxp5"]
[ext_resource type="AudioStream" uid="uid://3e6asid2bfxh" path="res://assets/misc/sounds/uipress.mp3" id="5_ghayy"]
[ext_resource type="Texture2D" uid="uid://ciby07ecbmnm2" path="res://unoptimized_assets/misc/textures/menu/yes.png" id="5_lxvsd"]
[ext_resource type="AudioStream" uid="uid://dpme8t701ycho" path="res://assets/misc/sounds/uirelease.mp3" id="6_xk6tx"]
[ext_resource type="Texture2D" uid="uid://2h42e4tljyiq" path="res://unoptimized_assets/misc/textures/menu/no.png" id="6_yrpjm"]
[ext_resource type="Script" uid="uid://dphjd415e6mu1" path="res://scenes/menu/menu_title_richtext.gd" id="13_e2lu5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d6e17"]

[sub_resource type="Theme" id="Theme_6gxp5"]
default_font = ExtResource("3_kbli3")
Button/colors/font_color = Color(0, 0, 0, 1)
Button/colors/font_disabled_color = Color(0.875, 0.875, 0.875, 0.5)
Button/colors/font_focus_color = Color(0, 0, 0, 1)
Button/colors/font_hover_color = Color(0, 0.545924, 0.934453, 1)
Button/colors/font_hover_pressed_color = Color(0.0536234, 0, 0.872918, 1)
Button/colors/font_outline_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(0.160392, 0.185003, 1, 1)
Button/font_sizes/font_size = 12
Button/fonts/font = ExtResource("3_kbli3")
Panel/styles/panel = SubResource("StyleBoxEmpty_d6e17")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ghayy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xk6tx"]
bg_color = Color(0.890196, 0.890196, 0.890196, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kbli3"]
content_margin_left = 5.0
bg_color = Color(0.892034, 0.892034, 0.892034, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
border_blend = true

[node name="Multiplayer" type="Sprite2D"]
position = Vector2(319, 240)
texture = ExtResource("1_kbli3")

[node name="Node" type="Node" parent="."]
script = ExtResource("2_kbli3")

[node name="icon" type="TextureRect" parent="Node"]
offset_left = 511.0
offset_top = 64.0
offset_right = 600.0
offset_bottom = 153.0
texture = ExtResource("2_xk6tx")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Uihover" type="AudioStreamPlayer" parent="Node"]
stream = ExtResource("4_6gxp5")
volume_db = -10.0
mix_target = 2
max_polyphony = 6

[node name="Uipress" type="AudioStreamPlayer" parent="Node"]
stream = ExtResource("5_ghayy")
volume_db = -10.0
mix_target = 2

[node name="Uirelease" type="AudioStreamPlayer" parent="Node"]
stream = ExtResource("6_xk6tx")
volume_db = -10.0
mix_target = 2

[node name="Back" type="Button" parent="Node"]
texture_filter = 2
offset_left = 200.0
offset_top = 384.0
offset_right = 280.0
offset_bottom = 402.0
scale = Vector2(1.52, 1.52)
focus_mode = 0
theme = SubResource("Theme_6gxp5")
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("3_kbli3")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxEmpty_ghayy")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_ghayy")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ghayy")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_ghayy")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_ghayy")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_ghayy")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ghayy")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_ghayy")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ghayy")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_ghayy")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ghayy")
text = "Back"
alignment = 0
metadata/_edit_use_anchors_ = true

[node name="HostPort" type="LineEdit" parent="Node"]
offset_left = 131.0
offset_top = 236.0
offset_right = 265.0
offset_bottom = 262.0
scale = Vector2(0.7, 0.7)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0.253238, 0.253238, 0.253238, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("3_kbli3")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxFlat_xk6tx")
theme_override_styles/normal = SubResource("StyleBoxFlat_kbli3")
text = "25565"
placeholder_text = "Port"
context_menu_enabled = false
emoji_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
caret_blink = true
metadata/_edit_use_anchors_ = true

[node name="servercat" type="RichTextLabel" parent="Node"]
offset_left = 137.0
offset_top = 177.0
offset_right = 199.0
offset_bottom = 196.0
tooltip_text = "Toggle enhanced lighting"
theme_override_colors/default_color = Color(0.299547, 0.299547, 0.299547, 1)
theme_override_fonts/normal_font = ExtResource("3_kbli3")
theme_override_font_sizes/normal_font_size = 10
text = "Server"
fit_content = true
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="host_ip" type="RichTextLabel" parent="Node"]
offset_left = 86.0
offset_top = 217.0
offset_right = 206.0
offset_bottom = 234.0
tooltip_text = "IP for server to bind to"
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_kbli3")
theme_override_font_sizes/normal_font_size = 11
text = "Bind IP"
fit_content = true
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="host_server" type="CheckBox" parent="Node"]
offset_left = 202.0
offset_top = 193.0
offset_right = 242.0
offset_bottom = 233.0
scale = Vector2(0.679999, 0.679999)
focus_mode = 0
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_icons/checked = ExtResource("5_lxvsd")
theme_override_icons/unchecked = ExtResource("6_yrpjm")
metadata/_edit_use_anchors_ = true

[node name="host_server2" type="RichTextLabel" parent="Node"]
offset_left = 86.0
offset_top = 199.0
offset_right = 211.0
offset_bottom = 216.0
tooltip_text = "Show sphere in which sheep process inside"
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_kbli3")
theme_override_font_sizes/normal_font_size = 11
text = "Host Server"
fit_content = true
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="HostIP" type="LineEdit" parent="Node"]
offset_left = 131.0
offset_top = 217.0
offset_right = 265.0
offset_bottom = 243.0
scale = Vector2(0.7, 0.7)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0.253238, 0.253238, 0.253238, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 1
theme_override_fonts/font = ExtResource("3_kbli3")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = SubResource("StyleBoxFlat_xk6tx")
theme_override_styles/normal = SubResource("StyleBoxFlat_kbli3")
text = "localhost"
placeholder_text = "Bind IP"
context_menu_enabled = false
emoji_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
caret_blink = true
metadata/_edit_use_anchors_ = true

[node name="host_port" type="RichTextLabel" parent="Node"]
offset_left = 86.0
offset_top = 236.0
offset_right = 206.0
offset_bottom = 253.0
tooltip_text = "Port to bind to"
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_kbli3")
theme_override_font_sizes/normal_font_size = 11
text = "Port"
fit_content = true
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="servercat2" type="RichTextLabel" parent="Node"]
anchors_preset = -1
anchor_left = -0.0453125
anchor_right = -0.0453125
offset_left = 139.0
offset_top = 272.0
offset_right = 201.0
offset_bottom = 291.0
tooltip_text = "Toggle enhanced lighting"
theme_override_colors/default_color = Color(0.299547, 0.299547, 0.299547, 1)
theme_override_fonts/normal_font = ExtResource("3_kbli3")
theme_override_font_sizes/normal_font_size = 10
text = "Client"
fit_content = true
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="Join" type="CheckBox" parent="Node"]
offset_left = 202.0
offset_top = 280.0
offset_right = 242.0
offset_bottom = 320.0
scale = Vector2(0.679999, 0.679999)
focus_mode = 0
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_icons/checked = ExtResource("5_lxvsd")
theme_override_icons/unchecked = ExtResource("6_yrpjm")
toggle_mode = false
metadata/_edit_use_anchors_ = true

[node name="join" type="RichTextLabel" parent="Node"]
offset_left = 86.0
offset_top = 284.0
offset_right = 206.0
offset_bottom = 301.0
tooltip_text = "Port to bind to"
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_kbli3")
theme_override_font_sizes/normal_font_size = 11
text = "Join"
fit_content = true
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="MenuTitle" type="RichTextLabel" parent="."]
anchors_preset = -1
anchor_right = 0.217187
anchor_bottom = 0.0729167
offset_left = -206.0
offset_top = -106.0
offset_right = -156.0
offset_bottom = -91.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("3_kbli3")
theme_override_font_sizes/normal_font_size = 16
text = "MenuTitle"
scroll_active = false
script = ExtResource("13_e2lu5")
metadata/_edit_use_anchors_ = true

[connection signal="button_down" from="Node/Back" to="Node" method="_on_back_button_down"]
[connection signal="mouse_entered" from="Node/Back" to="Node" method="_on_back_mouse_entered"]
[connection signal="pressed" from="Node/Back" to="Node" method="_on_back_pressed"]
[connection signal="pressed" from="Node/host_server" to="Node" method="_on_host_pressed"]
[connection signal="pressed" from="Node/Join" to="Node" method="_on_join_pressed"]
